--- a/style.css
+++ b/style.css
@@ -472,3 +472,102 @@ h1{
         color: #000;
     }
 }
+
+.team-section {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.team-section h2 {
+    font-size: 2rem;
+    margin-bottom: 30px;
+}
+
+.team-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+}
+
+.team-member {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.team-member img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+.team-info h3 {
+    font-size: 1.2rem;
+    margin: 0;
+}
+
+.team-info p {
+    margin: 5px 0;
+    font-size: 0.9rem;
+}
+
+footer {
+    background-color: #c3d2c4;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    padding: 30px;
+}
+
+@media (max-width: 480px) {
+    .footer-container{
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+}
+
+.footer-item{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.footer-item h3 {
+    margin-bottom: 10px;
+    font-size: 1.3rem;
+}
+
+.footer-item p {
+    margin: 5px 0;
+    font-size: 1rem;
+}
+
+.footer-item img {
+    width: 80px;
+    margin-bottom: 10px;
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+    border-top: 1px solid #ddd;
+    background-color: #16502D;
+    padding: 10px 0;
+}
+
+.footer-bottom p {
+    margin: 0;
+    font-size: 0.9rem;
+    color: #ddd;
+}
