--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 
   a{
     color: black;
+    text-decoration: none;
   }
 
 *{
@@ -23,26 +24,21 @@ body{
     background-color: rgb(240, 240, 240);
 }
 
-a{
-    text-decoration: none;
-}
-
 ul li{
     list-style: none;
 }
 
-body nav{
-    z-index: 99;
+body nav.navbar{
+    font-family: poppins ;
+    font-style: bold;
     position: fixed;
-    width: 100%;
-    min-height: 10vh;
-    background-color: rgba(240, 240, 240, 0.8);
-    color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 5vh 0;
+    background-color: rgba(240, 240, 240, 0.85);
     --animate-delay: 0.5s;
+    width: 100%;
+}
+
+nav .container button{
+    outline: none;
 }
 
 nav .logo a img{
@@ -97,10 +93,9 @@ nav ul li:hover::after {
     width: 100%;
     height: 105vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    align-items: end;
     flex-wrap: wrap;
-    position: relative; /* Penting untuk overlay */
+    position: relative;
     --animate-duration: 2s;
 }
 
@@ -110,7 +105,7 @@ nav ul li:hover::after {
     height: 100%;
     width: 100%;
     border-radius: 0 0 20px 20px;
-    z-index: 1; /* Pastikan gambar ada di bawah overlay */
+    z-index: 1;
 }
 
 .container1::after {
@@ -120,10 +115,58 @@ nav ul li:hover::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0) 70%);
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0) 65%);
     border-radius: 0 0 20px 20px;
-    z-index: 2; /* Overlay di atas gambar */
+    z-index: 2;
 }
+
+.overlay-text {
+    position: relative;
+    z-index: 3; /* Pastikan ini lebih tinggi dari yang lain */
+    color: white;
+    padding: 10vh 5vw;
+    min-height: 45vh;
+    max-width: 65vw;
+    margin-bottom: 5vh;
+    font-family: poppins;
+}
+@media (max-width: 480px) {
+    .overlay-text {
+        max-width: 80vw;
+        margin-bottom: 4;
+    }
+
+    .container1 .overlay-text h1{
+        font-size: 4rem;
+    }
+    .container1 .overlay-text p{
+        font-size: 1.6rem;
+    }
+}
+
+.overlay-text h1{
+    background-color: transparent;
+    text-align: start;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    font-size: 5rem;
+    --animate-duration: 1.5s;
+    --animate-delay: 1s;
+}
+.overlay-text p{
+    background-color: transparent;
+    text-align: start;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+    font-size: 2rem;
+    color: #d6d9d5;
+    --animate-duration: 1.5s;
+    --animate-delay: 1.25s;
+}
+
+
 
 /* Logo dan Card */
 
@@ -462,6 +505,7 @@ nav ul li:hover::after {
 }
 
 .title {
+    margin: 100px 0 75px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -528,7 +572,8 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 60px;
+    padding: 50px;
+    gap: 4rem;
 }
 
 .team-member {
@@ -581,6 +626,7 @@ footer {
 
 .footer-item{
     flex: 1;
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -593,13 +639,23 @@ footer {
     font-size: 1.3rem;
 }
 
-.footer-item p {
+.footer-item a{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.footer-item p.moto{
+    background-color: #D6D9D5;
+    border-radius: 10px;
     margin: 5px 0;
     font-size: 1rem;
+    padding: 10px;
 }
 
 .footer-item img {
-    width: 80px;
+    width: 150px;
     margin-bottom: 10px;
 }
 
@@ -616,6 +672,54 @@ footer {
     font-size: 0.9rem;
     color: #ddd;
 }
+
+
+a.sosmed{
+    width: 70%;
+    margin-bottom: 10px;
+    color: #000;
+}
+.sosmed{
+    background-color: #D6D9D5;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+}
+
+.sosmed img{
+    width: 28px;
+    height: auto;
+    margin: 0;
+    position: absolute;
+    left: 10px;
+}
+
+.sosmed p{
+    margin: 5px 0;
+    font-size: 1rem;
+}
+
+.ig.sosmed .img_color, .fb.sosmed .img_color, .twitter.sosmed .img_color, .yt.sosmed .img_color{
+    opacity: 0;
+    transition: all 0.5s;
+}
+
+.ig.sosmed:hover .img_color{
+    opacity: 100;
+}
+.fb.sosmed:hover .img_color{
+    opacity: 100;
+}
+.twitter.sosmed:hover .img_color{
+    opacity: 100;
+}
+.yt.sosmed:hover .img_color{
+    opacity: 100;
+}
+
 
 
 /* Contact */
