--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ html {
     scroll-behavior: smooth;
   }
 
+  ::-webkit-scrollbar{
+    display: none;
+  }
+
   a{
     color: black;
     text-decoration: none;
@@ -572,7 +576,7 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 50px;
+    padding: 75px;
     gap: 4rem;
 }
 
@@ -605,7 +609,6 @@ h1 {
 
 footer {
     background-color: #c3d2c4;
-    margin-top: 50px
 }
 
 .footer-container {
