Mengganti gambar background

--- a/style.css
+++ b/style.css
@@ -728,7 +728,7 @@ a.sosmed{
 /* Contact */
 
 .contact {
-    background-image: url('aset/img/contac_bg.jpg'); /* Pastikan jalur benar */
+    background-image: url('aset/img/bg2.webp'); /* Pastikan jalur benar */
     background-position: center;
     background-size: cover;
     display: flex;
