--- a/style.css
+++ b/style.css
@@ -580,11 +580,27 @@ h1 {
     gap: 4rem;
 }
 
+.team-container a{
+    color: black;
+    transition: all 0.5s;
+
+}
+
+.team-container a:hover{
+    color: #16502D;
+    text-decoration: none;
+}
+
 .team-member {
     display: flex;
     align-items: center;
     flex-direction: column;
     text-align: center;
+    transition: all 0.5s;
+}
+
+.team-member:hover img{
+    transform: scale(1.1);
 }
 
 .team-member img {
@@ -592,6 +608,7 @@ h1 {
     height: 80px;
     border-radius: 50%;
     margin-bottom: 10px;
+    transition: all 0.5s;
 }
 
 .team-info h3 {
